# xfce4-applet-memory

./: .gitignore  COPYING  Makefile.am  NEWS  README  configure.ac.in
icons/: Makefile.am
icons/128x128/: Makefile.am
icons/16x16/: Makefile.am
icons/24x24/: Makefile.am
icons/32x32/: Makefile.am
icons/48x48/: Makefile.am
icons/64x64/: Makefile.am
icons/scalable/: xfce-applet-memory-swap.xcf
panel-plugin/: Makefile.am  applet-memory.desktop.in  memory-plugin.c  memory.c  memory.cc
