iconsdir = $(datadir)/icons/hicolor/48x48/apps
icons_DATA = xfce-applet-memory-ram.png \
						 xfce-applet-memory-swap.png \
						 xfce-applet-memory-dial-000.png \
						 xfce-applet-memory-dial-005.png \
						 xfce-applet-memory-dial-010.png \
						 xfce-applet-memory-dial-015.png \
						 xfce-applet-memory-dial-020.png \
						 xfce-applet-memory-dial-025.png \
						 xfce-applet-memory-dial-030.png \
						 xfce-applet-memory-dial-035.png \
						 xfce-applet-memory-dial-040.png \
						 xfce-applet-memory-dial-045.png \
						 xfce-applet-memory-dial-050.png \
						 xfce-applet-memory-dial-055.png \
						 xfce-applet-memory-dial-060.png \
						 xfce-applet-memory-dial-065.png \
						 xfce-applet-memory-dial-070.png \
						 xfce-applet-memory-dial-075.png \
						 xfce-applet-memory-dial-080.png \
						 xfce-applet-memory-dial-085.png \
						 xfce-applet-memory-dial-090.png \
						 xfce-applet-memory-dial-095.png \
						 xfce-applet-memory-dial-100.png
EXTRA_DIST = $(icons_DATA)
